# slam_book

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  build.sh  camera_calibration.txt  code_notes.cc  git_commit_reset.sh  visual_odometry_epipolar.xyz  vo_epipolar.xyz
_g2o/doc/: g2o.fdb_latexmk  g2o.fls
_g2o/g2o/core/: base_edge.h  base_vertex.h  linear_solver.h  optimizable_graph.h
_g2o/g2o/stuff/: misc.h
cmake_modules/: README.MD
data/3dv_tutorial/: camera_calibration.txt
data/3dv_tutorial/pcd/: box.pcd  image_formation0.pcd  image_formation1.pcd  image_formation2.pcd  image_formation3.pcd  image_formation4.pcd
include/: clamp.h  const_iter.h  generate_data.h  hello_slam.h  kahan_sum.h  opencv_utils.h  pcd_io_utils.h  plot2d_curve.h  three_d_vision.h  utils.h  vision_utils.h
include/3dv_book/: borders.h  corner_detectors.h  edge_detectors.h  kernels.h  macros_util.h  operators.h  vision_book_utils.h
include/utils/: clamp.h
src/: CMakeLists.txt  g2o_curve_fitting.cc  handwriting_gauss_newton.cc  hello_slam.cc  main.cc  trajectory_error.cc  tst.cc
src/3dv_book/: corner_detectors.cc  edge_detectors.cc  filters.cc  operators.cc
src/3dv_tutorial/: CMakeLists.txt  camera_calibration.cc  distortion_correction.cc  image_formation.cc  image_stitching.cc  object_localization.cc  perspective_correction.cc  pose_estimation_book1.cc  pose_estimation_book1.cpp  pose_estimation_book2.cc  pose_estimation_book2.cpp  pose_estimation_book3.cc  pose_estimation_book3.cpp  pose_estimation_chessboard.cc  t.cc  tt.cpp  video_stabilization.cc  visual_odometry_epipolar.cc  vo_epipolar.cpp
src/ch4/trajectory_error/: CMakeLists.txt  trajectory_error.cc
src/ch5/image_basics/: CMakeLists.txt  image_basics.cc
src/ch6/ceres_curve_fitting/: CMakeLists.txt  ceres_curve_fitting.cc
src/ch6/g2o_curve_fitting/: CMakeLists.txt  g2o_curve_fitting.cc
src/ch6/my_codes/: CMakeLists.txt  ceres_curve_fitting.cc  handwriting_gauss_newton.cc
src/utils/: CMakeLists.txt
test/: CMakeLists.txt  const_iter_test.cc  kahan_test.cc
test/3dv_book/: CMakeLists.txt  test_sobel.cc
tmp/: CMakeLists.txt
tmp/opencv_tmp/: CMakeLists.txt  border_handling.cc  sobel.cc
tmp/pcl_write/: CMakeLists.txt  pcd_write.cc
utils/: CMakeLists.txt  READMD.MD  clamp.hpp  generate_data.cc  kahan_sum.hpp  opencv_utils.cc  pcd_io_utils.cc  plot2d_curve.cc  three_d_vision.cc  vision_book_utils.cc  vision_utils.cc
utils/opencv_impl/imgproc/: image_smoothing.cc
utils/opencv_impl/immcodecs/: decoders.cc
utils/opencv_impl/opencv_utils/: mat_to_vec.cc
